fix the label/caption order

--- a/case_study/case_study.tex
+++ b/case_study/case_study.tex
@@ -1,4 +1,5 @@
 \usetikzlibrary{backgrounds}
+    \label{fig:screenshot_response}
 \pgfplotsset{compat=1.5}
 
 
@@ -321,8 +322,8 @@ Also, web APIs often evolve with breaking changes without issuing a new version 
         \input{case_study/change_frequency}
       \end{axis}
     \end{tikzpicture}
-    \label{fig:facebook-chart}
     \caption{Facebook API Changes (11 Releases)}
+    \label{fig:facebook-chart}
   \end{subfigure}
 
   \begin{subfigure}[b]{\textwidth}
@@ -347,8 +348,8 @@ Also, web APIs often evolve with breaking changes without issuing a new version 
         \input{case_study/change_frequency}
       \end{axis}
     \end{tikzpicture}
-    \label{fig:stripe-chart}
     \caption{Stripe API Changes (30 Releases)}
+    \label{fig:stripe-chart}
   \end{subfigure}
 
   \begin{subfigure}[b]{\textwidth}
@@ -374,8 +375,8 @@ Also, web APIs often evolve with breaking changes without issuing a new version 
         \input{case_study/change_frequency}
       \end{axis}
     \end{tikzpicture}
-    \label{fig:wordpress-chart}
     \caption{WordPress REST API Changes (8 Releases)}
+    \label{fig:wordpress-chart}
   \end{subfigure}
   \begin{subfigure}[b]{\textwidth}
     \def\dataSourceFileName{github.dat}
@@ -400,8 +401,8 @@ Also, web APIs often evolve with breaking changes without issuing a new version 
         \input{case_study/change_frequency}
       \end{axis}
     \end{tikzpicture}
-    \label{fig:github-chart}
     \caption{GitHub API Changes (59 Releases)}
+    \label{fig:github-chart}
   \end{subfigure}
 
 
@@ -433,8 +434,8 @@ Also, web APIs often evolve with breaking changes without issuing a new version 
         \input{case_study/change_frequency}
       \end{axis}
     \end{tikzpicture}
-    \label{fig:gmaps-chart}
     \caption{Google Maps Web API (102 Releases)}
+    \label{fig:gmaps-chart}
   \end{subfigure}
 
 
@@ -462,8 +463,8 @@ Also, web APIs often evolve with breaking changes without issuing a new version 
         \input{case_study/change_frequency}
       \end{axis}
     \end{tikzpicture}
-    \label{fig:salesforce-chart}
     \caption{Salesforce REST API (4 Releases)}
+    \label{fig:salesforce-chart}
   \end{subfigure}
 
 %% Add the legend here
