adds all 5 papers, reasonable ok formatted

--- a/cisco_study/cisco_study.tex
+++ b/cisco_study/cisco_study.tex
@@ -1,4 +1,4 @@
-\section{Automated Example Oriented REST API Documentation at Cisco}
+\chapter{Automated Example Oriented REST API Documentation at Cisco}
 
 
 
