--- a/root.tex
+++ b/root.tex
@@ -136,10 +136,11 @@ Paragraph 3
 \clearpage
 
 \pagenumbering{arabic}
-\graphicspath{{controlled_study/}, {case_study/}, {cisco_study/}, {demo_paper/}}
+\graphicspath{{controlled_study/}, {case_study/}, {cisco_study/}, {spy_rest/}, {demo_paper/}}
 \pgfplotsset{table/search path={controlled_study,case_study}}
 \renewcommand\bibname{References}
 \include{case_study/case_study}
+\include{spy_rest/spy_rest}
 \include{demo_paper/demo_paper}
 \include{cisco_study/cisco_study}
 \include{controlled_study/controlled_study}
