structurally complete, sans abstract / introduction / conclusion

--- a/case_study/case_study.tex
+++ b/case_study/case_study.tex
@@ -41,7 +41,7 @@ The remainder of this paper is organized as follows: the next section is related
 
 We look at related work in the following areas: Empirical Research on Web API evolution, techniques to evolve Web APIs and, tool support for evolving Web APIs.
 
-\subsection{Empirical Research on Web API evolution} % (fold)
+\subsection{Empirical Research on Web API Evolution} % (fold)
 \label{sub:empirical_research}
 Several case study papers were published on Web API Evolution. Maleshkova et al. analyzed multiple Web APIs to identify the different approaches related to Web API descriptions, data formats, protocols, reusability, granularity, and authentication \cite{maleshkova}. They found that a lack of a standard format to document Web APIs and manual documentation led to API under-specification causing confusions about how to use the APIs for different use cases. They identified a need for automated approaches.
 
@@ -54,7 +54,7 @@ Espinha et al. looked at the growing pains with Web API evolution from the persp
 We distinguish our case study from these case studies as follows: we provide up-to-date information and include a diverse set of Web APIs. Our analysis uses new data sources such as API user forums, and question and answer sites. We focused this study on different approaches to versioning, documentation, and communicating changes as an API evolves.
 % subsection empirical_research (end)
 
-\subsection{Techniques to evolve Web APIs} % (fold)
+\subsection{Techniques to Evolve Web APIs} % (fold)
 \label{sub:techniques}
 Kaminski et al. presented a design technique called ``Chain of Adapters'' to implement evolving Web APIs \cite{kaminski2006design}. Using this approach, the source code of a Web API can evolve from a version to the next by introducing an adapter on the original version to implement any required change for new versions. This technique allows for multiple versions to be deployed concurrently since older versions are left unchanged.
 
@@ -70,7 +70,7 @@ VRESCo demonstrates an approach where a router between the Web API client and se
 
 Existing techniques to evolve Web APIs focused on finding different techniques for implementing evolving SOAP based Web APIs that cannot be readily applied to RESTful Web APIs. From our case study, we identified future research opportunities on techniques to solve the problems Web API evolution that are also applicable to RESTful APIs.
 
-\subsection{Tool support for evolving Web APIs} % (fold)
+\subsection{Tool Support for Evolving Web APIs} % (fold)
 \label{sub:tool_development}
 
 
