--- a/cisco_study/cisco_study.tex
+++ b/cisco_study/cisco_study.tex
@@ -253,7 +253,7 @@ A series of transformation needs to take place to produce usable API documentati
     \label{fig:screenshot_response}
   \end{subfigure}
 
-  \caption{Screenshots of the REST API documentation from Cisco using SpyREST}
+  \caption{Screenshots of the REST API Documentation from Cisco using SpyREST}
   \label{fig:screenshot}
 \end{figure*}
 
