--- a/controlled_study/controlled_study.tex
+++ b/controlled_study/controlled_study.tex
@@ -143,7 +143,7 @@ The WordPress team leverages this self-documenting feature to generate and publi
   \begin{center}
     \fbox{\includegraphics[width=\linewidth,keepaspectratio]{schema.png}}
   \end{center}
-  \caption{Screenshot of documentation for Post/date}
+  \caption{Screenshot of Documentation for Post/date}
   \label{fig:schema}
 \end{figure}
 
