--- a/controlled_study/controlled_study.tex
+++ b/controlled_study/controlled_study.tex
@@ -27,6 +27,7 @@
 %\begin{document}
 %\title{A Study of the Effectiveness of Usage Examples in REST API Documentation}
 \chapter{A Study of the Effectiveness of Usage Examples in REST API Documentation}
+\label{chapter:controlled_study}
 
 
  %\author{\IEEEauthorblockN{S M Sohan, Frank Maurer\IEEEauthorrefmark{1}}
