--- a/demo_paper/demo_paper.tex
+++ b/demo_paper/demo_paper.tex
@@ -19,6 +19,7 @@
 
 
 \chapter{SpyREST in Action: An Automated RESTful API Documentation Tool}
+\label{chapter:demo_paper}
 
 %\author{\IEEEauthorblockN{S M Sohan, Craig Anslow, and Frank Maurer}
 %\IEEEauthorblockA{Department of Computer Science\\
