--- a/spy_rest/spy_rest.tex
+++ b/spy_rest/spy_rest.tex
@@ -1,4 +1,5 @@
 \chapter{SpyREST: Automated RESTful API Documentation using an HTTP Proxy Server}
+\label{chapter:spy_rest}
 
 
 %\author{\IEEEauthorblockN{S M Sohan, Craig Anslow, and Frank Maurer}
