adds the future work

--- a/root.tex
+++ b/root.tex
@@ -191,6 +191,15 @@ In my third study, I evaluated the proposed technique in an industrial setup and
 
 To understand the impact of usage examples that can be derived from API tests, I performed the last study with professional software engineers and found that the examples help reduce the common obstacles faced by REST API client developers. I derived a list of recommendations for documenting usage examples to satisfy the common information needs when REST API client developers use an API. Practitiones can follow the recommendations as guideline to allocate ap- propriate priority while documenting their REST APIs in a resource constrained environment.
 
+\section{Future Work}
+Based on my findings from the this research, I identified the following list of potential future research problems.
+
+\begin{itemize}
+  \item \textbf{Extension to Support Complex Usage Scenarios.} Future research needs to be carried out to find techniques to automate the process of documenting usage scenarios that require multiple API calls to perform complex API tasks. Future research is also needed to investigate techniques for automatically cross-referencing API elements to allow API client developers with an improved navigation experience while reading the REST API documentation.
+  \item \textbf{Automated Changelog Generation.} For frequently evolving APIs, future research needs to extend the proposed technique in this thesis to automatically compute human readable changelogs and detect version compatibility to follow a semantic versioning scheme. This would help API client developers with an accurate information about the potential impact of an API update on their own application.
+  \item \textbf{Extensions of the Interception Based Documentation to non-REST APIs.}
+\end{itemize}
+
 \appendix
 \include{appendix}
 \end{document}
