future work is done

--- a/root.tex
+++ b/root.tex
@@ -197,7 +197,7 @@ Based on my findings from the this research, I identified the following list of 
 \begin{itemize}
   \item \textbf{Extension to Support Complex Usage Scenarios.} Future research needs to be carried out to find techniques to automate the process of documenting usage scenarios that require multiple API calls to perform complex API tasks. Future research is also needed to investigate techniques for automatically cross-referencing API elements to allow API client developers with an improved navigation experience while reading the REST API documentation.
   \item \textbf{Automated Changelog Generation.} For frequently evolving APIs, future research needs to extend the proposed technique in this thesis to automatically compute human readable changelogs and detect version compatibility to follow a semantic versioning scheme. This would help API client developers with an accurate information about the potential impact of an API update on their own application.
-  \item \textbf{Extensions of the Interception Based Documentation to non-REST APIs.}
+  \item \textbf{Extensions of the Interception Based Documentation to non-REST APIs.} The proposed technique can be extended to document usage examples for other stateless APIs outside the realm of REST APIs. The structure of REST APIs are commonly documented using programming language features and formatted comments. Future research can investigate the feasibility of leveraging the interception technique to source realistic usage examples for local stateless APIs from existing API test code.
 \end{itemize}
 
 \appendix
